Fix vertical alignment issues on banner

--- a/app/assets/stylesheets/components/cookie_banner.scss
+++ b/app/assets/stylesheets/components/cookie_banner.scss
@@ -9,16 +9,16 @@ $govuk-cookie-banner-text-green: #00823b;
 
 .govuk-cookie-banner {
   @include govuk-font(19);
-  padding: govuk-spacing(2) 0;
+  padding: govuk-spacing(4) 0;
   background-color: $govuk-cookie-banner-background;
   border: 2px solid govuk-colour("black");
 }
 
 .govuk-cookie-banner__message {
   display: inline-block;
-  margin-top: govuk-spacing(2);
+  margin: govuk-spacing(0);
   padding-right: govuk-spacing(4);
-  padding-bottom: govuk-spacing(2);
+  padding-bottom: govuk-spacing(0);
   color: $govuk-cookie-banner-text-green;
 }
 
@@ -29,9 +29,11 @@ $govuk-cookie-banner-text-green: #00823b;
     display: inline-block;
   }
 
+  vertical-align: super;
+
   .govuk-button--secondary {
     padding: 8px 10px;
-    margin-bottom: govuk-spacing(2);
+    margin-bottom: 0;
     border-color: $govuk-cookie-banner-text-green;
     color: $govuk-cookie-banner-text-green;
     background-color: govuk-colour("white");
